# hackage-server

./: .authorspellings  .dockerignore  .gitignore  .gitmodules  .travis.yml  BuildClient.hs  Dockerfile  GNUmakefile  ImportClient.hs  LICENSE  Locations.hs  Main.hs  MirrorClient.hs  MirrorMain.hs  PublicFile.hs  README.md  TODO  Unpack.hs  Util.hs  cabal.haskell-ci  cabal.project  cabal.project.local-ghc-7.10.3  cabal.project.local-ghc-7.6.3  cabal.project.local-ghc-8.2.1  config  fix-whitespace.yaml  flake.nix  hackage-blog.cabal  hackage-server.cabal  hackage.html  index.html  init_db.sql  nix-default-servers.cfg  old-hackage-download.sh  old-hackage-import.sh  run-docker.sh  rundocs.sh  servers.cfg  shell.nix  site.hs  (+4 more)
.github/workflows/: Makefile  cabal-mtl-2.3.yml  cabal.off  cabal.yml  ci.yml  dependabot-auto-approve.yml  haskell-ci.patch  haskell-ci.yml  nix-flake.yml  nix-shell.yml  test-nix-shell.sh  update-flake-lock.yml
Data/: IntTrie.hs  StringTable.hs  TarIndex.hs
Distribution/: Client.hs  Server.hs
Distribution/Client/: Cron.hs  DistroMap.hs  HtPasswdDb.hs  Index.hs  ParseApacheLogs.hs  PkgIndex.hs  TagsFile.hs  UploadLog.hs  UserAddressesDb.hs
Distribution/Client/Mirror/: CmdLine.hs  Config.hs  Repo.hs  Session.hs  State.hs
Distribution/Server/: Acid.hs  AsyncVar.hs  BlobStorage.hs  BuildReport.hs  BuildReports.hs  BulkImport.hs  Cache.hs  Caches.hs  Core.hs  Error.hs  Export.hs  Feature.hs  Features.hs  Framework.hs  Hook.hs  Import.hs  IndexUtils.hs  Instances.hs  PackageIndex.hs  PackagesState.hs  Prelude.hs  Resource.hs  ResourceTypes.hs  ServerParts.hs  State.hs  Tar.hs  Types.hs  Upload.hs
Distribution/Server/Auth/: Basic.hs  Crypt.hs  HtPasswdDb.hs  Types.hs
Distribution/Server/Backup/: BulkImport.hs  Export.hs  FlatFiles.hs  Import.hs  ServerParts.hs  UploadLog.hs  Utils.hs
Distribution/Server/BuildReport/: Backup.hs  BuildReport.hs  BuildReports.hs  ReportsBackup.hs  State.hs
Distribution/Server/BulkImport/: UploadLog.hs
Distribution/Server/Distributions/: Backup.hs  Distributions.hs  DistroBackup.hs  ServerParts.hs  State.hs  Types.hs
Distribution/Server/Export/: FlatFiles.hs  ServerParts.hs  Utils.hs
Distribution/Server/Features/: AdminFrontend.hs  AdminLog.hs  BuildReports.hs  Check.hs  Core.hs  Distro.hs  Documentation.hs  DownloadCount.hs  EditCabalFiles.hs  HaskellPlatform.hs  HoogleData.hs  Html.hs  Json.hs  LegacyPasswds.hs  LegacyRedirects.hs  Mirror.hs  NameSearch.hs  PackageCandidates.hs  PackageContents.hs  PackageFeed.hs  PackageInfoJSON.hs  PackageList.hs  Packages.hs  PreferredVersions.hs  Ranking.hs  RecentPackages.hs  Reports.hs  ReverseDependencies.hs  Search.hs  Security.hs  ServerApiDoc.hs  ServerIntrospect.hs  Sitemap.hs  StaticFiles.hs  Tags.hs  TarIndexCache.hs  Upload.hs  UserDetails.hs  UserNotify.hs  UserSignup.hs  (+2 more)
Distribution/Server/Framework/: Auth.hs  AuthCrypt.hs  AuthTypes.hs  BackupDump.hs  BackupRestore.hs  BlobStorage.hs  Cache.hs  CacheControl.hs  Cron.hs  Error.hs  Feature.hs  HappstackUtils.hs  Hook.hs  HtmlFormWrapper.hs  Instances.hs  Logging.hs  MemSize.hs  RequestContentTypes.hs  Resource.hs  ResourceTypes.hs  ResponseContentTypes.hs  ServerEnv.hs  Templating.hs  Types.hs  Validation.hs
Distribution/Server/LegacyImport/: BulkImport.hs  HtPasswdDb.hs  UploadLog.hs
Distribution/Server/PackageUpload/: Unpack.hs
Distribution/Server/Pages/: AdminLog.hs  BuildReports.hs  Distributions.hs  Group.hs  Index.hs  Package.hs  PackageAdmin.hs  PackageFromTemplate.hs  Recent.hs  Reverse.hs  Template.hs  Util.hs
Distribution/Server/TarIndex/: State.hs
Distribution/Server/Users/: AuthToken.hs  Backup.hs  Group.hs  Permissions.hs  Resource.hs  ServerParts.hs  State.hs  Types.hs  UserBackup.hs  UserIdSet.hs  Users.hs
Hackage/: IndexUtils.hs  Tar.hs  Types.hs
ImportClient/: BulkImport.hs  DistroMap.hs  HtPasswdDb.hs  PkgIndex.hs  TagsFile.hs  UploadLog.hs
benchmarks/: FdExhaustionDownloadCountHypothesis.hs  RevDeps.hs
css/: default.css
datafiles/TUF/: README.md  mirrors.json  root.json  snapshot.private  timestamp.private
datafiles/static/: browse.js  hackage-fonts.css  hackage-haddock.js  hackage.css  new-browse.js
datafiles/templates/: account-upgrade.html.st  accounts.html.st  admin.html.st  footer.st  hackageCssTheme.st  hackageErrorPage.html.st  hackageErrorPage.txt.st  hackagePageHeader.st  index.html.st  new-features.html.st  packagePageAssets.st  upload.html.st
docs/: create-doc-builder-vm.txt  run-doc-builder.sh.example
example-keys/: README.md
exes/: BuildClient.hs  ImportClient.hs  Main.hs  MirrorClient.hs  ReverseDepsForPackage.hs  ReverseDepsPreferredForPackage.hs
libstemmer_c/: LICENSE
libstemmer_c/include/: libstemmer.h
libstemmer_c/libstemmer/: libstemmer.c
main/: BuildClient.hs  MirrorClient.hs
nix/: flake-module.nix  nixos-module.nix  sources.json  test.nix
posts/: 2018-03-20-deployment.markdown  2018-04-26-downtime.markdown
src/Data/: IntTrie.hs  StringTable.hs  TarIndex.hs
src/Distribution/: Client.hs  Server.hs
static/: 503.html  account-request.html  account-upgrade.html  accounts.html  admin.html  hackage.css  hackage.html  hackageCssTheme.st  hackagePageHeader.st  upload.html
static/UserSignupReset/: ResetEmailSent.st  ResetRequest.st  SignupConfirm.st  SignupEmailSent.st  SignupRequest.st
static/haddock/: haddock-util.js  ocean.css  xhaddock.css
static/templates/: account-upgrade.html.st  accounts.html.st  admin.html.st  hackageCssTheme.st  hackagePageHeader.st  index.html.st  upload.html.st
templates/: default.html
tests/: BrowseQueryParserTest.hs  CreateUserTest.hs  DocTestMain.hs  HackageClientUtils.hs  HashTestMain.hs  HighLevelTest.hs  HttpUtils.hs  MailUtils.hs  Package.hs  PackageTestMain.hs  PaginationTest.hs  RevDepCommon.hs  ReverseDependenciesTest.hs  Run.hs  TarCheck.hs  Util.hs  VouchTest.hs
tests/unpack-checks/LANGUAGE-GHC-9.2/: LANGUAGE-GHC.cabal
tests/unpack-checks/bad-specver-package-0/: LICENSE  bad-specver-package.cabal
tests/unpack-checks/missing-configure-0.1.0.0/: missing-configure.cabal
(+351 files in other folders)
