name:         hackage-server
version:      0.5.1
category:     Distribution
synopsis:     The Hackage web server
description:  The new implementation of the Hackage web server, based on the
              Happstack architecture. This is the implementation used to power
              <http://hackage.haskell.org/>
              .
              It is designed to be easy to run your own instance.
              It also includes a doc builder client and a mirroring client.
author:       Duncan Coutts <duncan@community.haskell.org>,
              David Himmelstrup <lemmih@gmail.com>,
              Ross Paterson <ross@soi.city.ac.uk>,
              Matthew Gruen <wikigracenotes@gmail.com>
maintainer:   Duncan Coutts <duncan@community.haskell.org>,
              Matthew Gruen <wikigracenotes@gmail.com>
copyright:    2008-2015 Duncan Coutts,
              2012-2013 Edsko de Vries,
              2013 Google Inc.,
              2010-2011 Matthew Gruen,
              2009-2010 Antoine Latter,
              2008 David Himmelstrup,
              2007 Ross Paterson
license:      BSD3
license-file: LICENSE

build-type: Simple
cabal-version: 2.0
tested-with: GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3

data-dir: datafiles
data-files:
  templates/*.html.st
  templates/*.st
  templates/*.txt.st
  templates/EditCabalFile/*.html.st
  templates/Html/*.html.st
  templates/LegacyPasswds/*.html.st
  templates/Search/*.xml.st
  templates/UserSignupReset/*.html.st
  templates/UserSignupReset/*.email.st
  templates/AdminFrontend/*.html.st
  templates/Users/*.html.st

  static/*.css
  static/*.ico
  static/*.png

  TUF/README.md
  TUF/mirrors.json
  TUF/root.json
  TUF/snapshot.private
  TUF/timestamp.private

extra-source-files:
  tests/permissions-tarballs/*.tar.gz
  tests/unpack-checks/correct-package-0.1.0.0/LICENSE
  tests/unpack-checks/correct-package-0.1.0.0/Main.hs
  tests/unpack-checks/correct-package-0.1.0.0/Setup.hs
  tests/unpack-checks/correct-package-0.1.0.0/correct-package.cabal
  tests/unpack-checks/missing-configure-0.1.0.0/LICENSE
  tests/unpack-checks/missing-configure-0.1.0.0/Main.hs
  tests/unpack-checks/missing-configure-0.1.0.0/Setup.hs
  tests/unpack-checks/missing-configure-0.1.0.0/missing-configure.cabal

source-repository head
  type: git
  location: https://github.com/haskell/hackage-server

flag minimal
  default: False
  description: Include only the minimum feature set.
  manual: True

flag debug
  default: False
  description: Include debugging features
  manual: True

-- Requires working local outgoing email
flag test-create-user
  default: False
  manual: True


library lib-server
  -- TODO: move this into a 'library lib-client';
  --       needs minor source-tree restructuring
  exposed-modules:
    Distribution.Client
    Distribution.Client.Cron
    Distribution.Client.UploadLog
    Distribution.Client.Index
    Distribution.Client.Mirror.CmdLine
    Distribution.Client.Mirror.Config
    Distribution.Client.Mirror.Repo.Hackage2
    Distribution.Client.Mirror.Repo.Local
    Distribution.Client.Mirror.Repo.Util
    Distribution.Client.Mirror.Repo.Secure
    Distribution.Client.Mirror.Repo.Types
    Distribution.Client.Mirror.Repo
    Distribution.Client.Mirror.Session
    Distribution.Client.Mirror.State

    Distribution.Client.DistroMap
    Distribution.Client.HtPasswdDb
    Distribution.Client.ParseApacheLogs
    Distribution.Client.TagsFile
    Distribution.Client.UserAddressesDb

  -- misc internal modules
  other-modules:
    Data.IntTrie
    Data.StringTable
    Data.TarIndex

  exposed-modules:
    Paths_hackage_server
  autogen-modules:
    Paths_hackage_server

  exposed-modules:
    Distribution.Server

    Distribution.Server.Framework
    Distribution.Server.Framework.Auth
    Distribution.Server.Framework.AuthTypes
    Distribution.Server.Framework.AuthCrypt
    Distribution.Server.Framework.BlobStorage
    Distribution.Server.Framework.Cache
    Distribution.Server.Framework.Cron
    Distribution.Server.Framework.Error
    Distribution.Server.Framework.Logging
    Distribution.Server.Framework.Feature
    Distribution.Server.Framework.Hook
    Distribution.Server.Framework.HtmlFormWrapper
    Distribution.Server.Framework.Instances
    Distribution.Server.Framework.MemState
    Distribution.Server.Framework.MemSize
    Distribution.Server.Framework.Resource
    Distribution.Server.Framework.RequestContentTypes
    Distribution.Server.Framework.ResponseContentTypes
    Distribution.Server.Framework.CacheControl
    Distribution.Server.Framework.BackupDump
    Distribution.Server.Framework.BackupRestore
    Distribution.Server.Framework.ServerEnv
    Distribution.Server.Framework.Templating
    Distribution.Server.Framework.HappstackUtils

    Distribution.Server.Packages.Index
    Distribution.Server.Packages.ModuleForest
    Distribution.Server.Packages.PackageIndex
    Distribution.Server.Packages.Types
    Distribution.Server.Packages.Unpack
    Distribution.Server.Packages.Render
    Distribution.Server.Packages.ChangeLog
    Distribution.Server.Packages.Readme
    Distribution.Server.Packages.Metadata

    -- [not used by anyone] Distribution.Server.Pages.Distributions
    Distribution.Server.Pages.Group
    Distribution.Server.Pages.Index
    Distribution.Server.Pages.Package
    Distribution.Server.Pages.PackageFromTemplate
    Distribution.Server.Pages.Package.HaddockHtml
    Distribution.Server.Pages.Package.HaddockParse
    Distribution.Server.Pages.Recent
    Distribution.Server.Pages.AdminLog
    -- [reverse index disabled] Distribution.Server.Pages.Reverse
    Distribution.Server.Pages.Template
    Distribution.Server.Pages.Util

    Distribution.Server.Users.Group
    Distribution.Server.Users.State
    Distribution.Server.Users.Types
    Distribution.Server.Users.Backup
    Distribution.Server.Users.Users
    Distribution.Server.Users.AuthToken
    Distribution.Server.Users.UserIdSet

    Distribution.Server.Util.Histogram
    Distribution.Server.Util.CountingMap
    Distribution.Server.Util.CabalRevisions
    Distribution.Server.Util.Parse
    Distribution.Server.Util.ServeTarball
    -- [unused] Distribution.Server.Util.TarIndex
    Distribution.Server.Util.GZip
    Distribution.Server.Util.ContentType
    Distribution.Server.Util.SigTerm
    Distribution.Server.Util.ReadDigest
    Distribution.Server.Util.Nonce
    Distribution.Server.Util.Merge
    Distribution.Server.Util.ParseSpecVer

    Distribution.Server.Features
    Distribution.Server.Features.Core
    Distribution.Server.Features.Core.State
    Distribution.Server.Features.Core.Backup
    Distribution.Server.Features.Security
    Distribution.Server.Features.Security.Backup
    Distribution.Server.Features.Security.FileInfo
    Distribution.Server.Features.Security.Layout
    Distribution.Server.Features.Security.MD5
    Distribution.Server.Features.Security.Migration
    Distribution.Server.Features.Security.Orphans
    Distribution.Server.Features.Security.ResponseContentTypes
    Distribution.Server.Features.Security.SHA256
    Distribution.Server.Features.Security.State
    Distribution.Server.Features.Mirror
    Distribution.Server.Features.Upload
    Distribution.Server.Features.Upload.State
    Distribution.Server.Features.Upload.Backup
    Distribution.Server.Features.Users


  if flag(minimal)
    cpp-options: -DMINIMAL
  else
    exposed-modules:
      Distribution.Server.Features.TarIndexCache
      Distribution.Server.Features.TarIndexCache.State
      Distribution.Server.Features.LegacyRedirects
      Distribution.Server.Features.LegacyPasswds
      Distribution.Server.Features.LegacyPasswds.Auth
      Distribution.Server.Features.PackageContents
      Distribution.Server.Features.AdminFrontend
      Distribution.Server.Features.AdminLog
      Distribution.Server.Features.BuildReports
      Distribution.Server.Features.BuildReports.BuildReport
      Distribution.Server.Features.BuildReports.BuildReports
      Distribution.Server.Features.BuildReports.Backup
      Distribution.Server.Features.BuildReports.Render
      Distribution.Server.Features.BuildReports.State
      Distribution.Server.Features.PackageCandidates
      Distribution.Server.Features.PackageCandidates.Types
      Distribution.Server.Features.PackageCandidates.State
      Distribution.Server.Features.PackageCandidates.Backup
      Distribution.Server.Features.PackageList
      Distribution.Server.Features.Distro
      Distribution.Server.Features.Distro.Distributions
      Distribution.Server.Features.Distro.Backup
      Distribution.Server.Features.Distro.State
      Distribution.Server.Features.Distro.Types
      Distribution.Server.Features.Documentation
      Distribution.Server.Features.Documentation.State
      Distribution.Server.Features.DownloadCount
      Distribution.Server.Features.DownloadCount.State
      Distribution.Server.Features.DownloadCount.Backup
      Distribution.Server.Features.EditCabalFiles
      Distribution.Server.Features.Html
      Distribution.Server.Features.Html.HtmlUtilities
      Distribution.Server.Features.HoogleData
      Distribution.Server.Features.HaskellPlatform
      Distribution.Server.Features.HaskellPlatform.State
      Distribution.Server.Features.Search
      Distribution.Server.Features.Search.BM25F
      Distribution.Server.Features.Search.DocIdSet
      Distribution.Server.Features.Search.DocTermIds
      Distribution.Server.Features.Search.DocFeatVals
      Distribution.Server.Features.Search.ExtractDescriptionTerms
      Distribution.Server.Features.Search.ExtractNameTerms
      Distribution.Server.Features.Search.PkgSearch
      Distribution.Server.Features.Search.SearchEngine
      Distribution.Server.Features.Search.SearchIndex
      Distribution.Server.Features.Search.TermBag
      Distribution.Server.Features.Sitemap.Functions
      Distribution.Server.Features.Votes
      Distribution.Server.Features.Votes.State
      Distribution.Server.Features.Votes.Render
      Distribution.Server.Features.RecentPackages
      Distribution.Server.Features.PreferredVersions
      Distribution.Server.Features.PreferredVersions.State
      Distribution.Server.Features.PreferredVersions.Backup
      -- [reverse index disabled] Distribution.Server.Features.ReverseDependencies
      -- [reverse index disabled] Distribution.Server.Features.ReverseDependencies.State
      Distribution.Server.Features.Tags
      Distribution.Server.Features.Tags.Backup
      Distribution.Server.Features.Tags.State
      Distribution.Server.Features.UserDetails
      Distribution.Server.Features.UserSignup
      Distribution.Server.Features.StaticFiles
      Distribution.Server.Features.ServerIntrospect
      Distribution.Server.Features.Sitemap

  if flag(debug)
    cpp-options: -DDEBUG
    other-modules:
      Distribution.Server.Features.Crash

  -- version ranges of pre-installed packages for GHC 7.6 through GHC 8.0
  --
  -- when possible, the CI jobs use `installed`-constraints on these;
  -- see `cabal.project.local-ghc-${VERSION}` files
  build-depends: array                  >= 0.4   && < 0.6
               , base                   >= 4.6   && < 5
               , binary                 >= 0.5   && < 0.9
               , bytestring             >= 0.10  && < 0.11
               , deepseq                >= 1.3   && < 1.5
               , directory              >= 1.2   && < 1.4
               , filepath               >= 1.3   && < 1.5
               , pretty                 >= 1.0   && < 1.2
               , process                >= 1.1   && < 1.5
               , time                   >= 1.4   && < 1.7
               , transformers           >= 0.3   && < 0.6
               , unix                   >= 2.6   && < 2.8

  -- Except for GHC-bundled libraries (see above), it's more easier/managable from
  -- a maintainance POV to support only single major-version-ranges
  build-depends: Cabal                 ^>= 2.0
               , HStringTemplate       ^>= 0.8
               , HTTP                  ^>= 4000.3.6
               , QuickCheck            ^>= 2.9
               , acid-state            ^>= 0.14
               , aeson                 ^>= 1.1
               , async                 ^>= 2.1
               , attoparsec            ^>= 0.13
               , base16-bytestring     ^>= 0.1
               , base64-bytestring     ^>= 1.0
                 --NOTE: blaze-builder-0.4 is now a compat package that uses bytestring-0.10 builder
               , blaze-builder         ^>= 0.4
               , blaze-html            ^>= 0.9
               , cereal                ^>= 0.5
               , cheapskate            ^>= 0.1
               , containers            ^>= 0.5
               , cryptohash-md5        ^>= 0.11.100
               , cryptohash-sha256     ^>= 0.11.100
               , csv                   ^>= 0.1
               , ed25519               ^>= 0.0.5
               , friendly-time         ^>= 0.4
               , hackage-security      ^>= 0.5.2
               , hackage-security-HTTP ^>= 0.1.1
               , haddock-library       ^>= 1.4.5
               , happstack-server      ^>= 7.4
               , hashable              ^>= 1.2
               , hslogger              ^>= 1.2
               , lifted-base           ^>= 0.2.1
               , mime-mail             ^>= 0.4
                 -- we use Control.Monad.Except, introduced in mtl-2.2.1
               , mtl                   ^>= 2.2.1
               , network               ^>= 2.6
               , network-uri           ^>= 2.6
               , parsec                ^>= 3.1
               , random                ^>= 1.1
               , rss                   ^>= 3000.2.0.3
               , safecopy              ^>= 0.9.1
               , semigroups            ^>= 0.18.3
               , split                 ^>= 0.2
               , stm                   ^>= 2.4
               , tagged                ^>= 0.8.5
               , tar                   ^>= 0.5
               , text                  ^>= 1.2.2
               , time-locale-compat    ^>= 0.1.0.1
               , unordered-containers  ^>= 0.2.3.0
               , vector                ^>= 0.12
               , xhtml                 ^>= 3000.2
               , xmlgen                ^>= 0.6
               , zlib                  ^>= 0.5.3

  if ! flag(minimal)
    build-depends: snowball            ^>= 1.0
                 , tokenize            ^>= 0.3

  if !os(darwin)
    extra-libraries: crypt

  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -fno-warn-unused-do-bind -fno-warn-deprecated-flags
               -funbox-strict-fields
  other-extensions: TemplateHaskell

executable hackage-server
  main-is: Main.hs
  hs-source-dirs: exes

  build-depends: lib-server
                 -- version constraints inherited from lib-server
               , Cabal
               , base
               , bytestring
               , directory
               , filepath
               , network-uri
               , parsec
               , unix

  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -fno-warn-unused-do-bind -fno-warn-deprecated-flags
               -threaded -funbox-strict-fields
  ghc-options: -rtsopts -with-rtsopts=-I0

executable hackage-mirror
  hs-source-dirs: exes
  main-is: MirrorClient.hs

  build-depends:  lib-server

  build-depends: lib-server
                 -- version constraints inherited from lib-server
                , Cabal
                , HTTP
                , base
                , bytestring
                , containers
                , directory
                , filepath
                , hackage-security
                , mtl
                , parsec
                , process
                , tar
                , zlib

  default-language:   Haskell2010
  other-extensions:   CPP
  ghc-options: -Wall -fwarn-tabs

executable hackage-build
  hs-source-dirs: exes
  main-is: BuildClient.hs

  build-depends: lib-server
                 -- version constraints inherited from lib-server
               , Cabal
               , HTTP
               , aeson
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , mtl
               , network-uri
               , pretty
               , process
               , tar
               , time
               , zlib

  -- Runtime dependency only;
  -- TODO: we have no proper support for this kind of dependencies in cabal
  -- `build-tool-depends` specifies compile/test-time deps, but not run-time deps
  --
  -- build-tool-depends: hscolour:hscolour >= 1.8

  default-language: Haskell2010
  -- the -threaded option is necessary for correct handling
  -- of CTRL-C (not sure why :( )
  ghc-options: -Wall -fwarn-tabs -threaded

executable hackage-import
  -- TODO/FIXME: the code has bitrotten
  buildable: False

  hs-source-dirs: exes
  main-is: ImportClient.hs

  build-depends: lib-server
                 -- version constraints inherited from lib-server
               , Cabal
               , HTTP
               , aeson
               , async
               , base
               , bytestring
               , csv
               , directory
               , filepath
               , mtl
               , network-uri
               , tar
               , text
               , time
               , time-locale-compat
               , unordered-containers
               , vector

  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs

Test-Suite HighLevelTest
    type:           exitcode-stdio-1.0
    main-is:        HighLevelTest.hs
    other-modules:
      HackageClientUtils
      Run
      MailUtils
      HttpUtils
      Package
      Util
    hs-source-dirs: tests

    -- This tells cabal that this test depends on the executable
    -- component 'hackage-server' from this very same package, as well
    -- as adding the build-folder where the `hackage-server`
    -- executable can be found in front of $PATH
    build-tools: hackage-server

    -- NOTE: lib-server is not a real dependency; it's only used to inherit version constraints
    build-depends: lib-server
                   -- version constraints inherited from lib-server
                 , Cabal
                 , HTTP
                 , aeson
                 , base
                 , base64-bytestring
                 , bytestring
                 , directory
                 , filepath
                 , network
                 , network-uri
                 , process
                 , random
                 , tar
                 , text
                 , unix
                 , unordered-containers
                 , vector
                 , zlib
                   -- component-specific dependencies
                 , xml          ^>= 1.3.14
                 , io-streams   ^>= 1.3
                 , http-streams ^>= 0.8.4

    default-language: Haskell2010
    ghc-options:    -threaded -Wall

Test-Suite CreateUserTest
    if ! flag(test-create-user)
      buildable: False
    type:           exitcode-stdio-1.0
    main-is:        CreateUserTest.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    ghc-options:    -threaded -Wall

    -- see note in 'Test-Suite HighLevelTest'
    build-tools: hackage-server

    -- NOTE: lib-server is not a real dependency; it's only used to inherit version constraints
    build-depends: lib-server
                   -- version constraints inherited from lib-server
                 , Cabal
                 , HTTP
                 , aeson
                 , base
                 , base64-bytestring
                 , bytestring
                 , directory
                 , filepath
                 , network
                 , process
                 , random
                 , tar
                 , text
                 , unix
                 , unordered-containers
                 , vector
                 , zlib
                   -- component-specific dependencies
                 , xml          ^>= 1.3.14

Test-Suite PackageTests
    type:           exitcode-stdio-1.0
    main-is:        PackageTestMain.hs
    other-modules:  Distribution.Server.Packages.UnpackTest
    hs-source-dirs: tests
    default-language: Haskell2010
    ghc-options:    -threaded -Wall -fno-warn-orphans

    build-depends: lib-server
                   -- version constraints inherited from lib-server
                 , base
                 , bytestring
                 , containers
                 , filepath
                 , mtl
                 , tar
                 , text
                 , time
                 , zlib
                 , Cabal
                   -- component-specific dependencies
                 , test-framework        ^>= 0.8
                 , test-framework-hunit  ^>= 0.3
                 , HUnit                 ^>= 1.6

Test-Suite HashTests
    type:           exitcode-stdio-1.0
    main-is:        HashTestMain.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    ghc-options:    -threaded -Wall -fno-warn-orphans

    build-depends: lib-server
                   -- version constraints inherited from lib-server
                 , Cabal
                 , array
                 , base
                 , base16-bytestring
                 , binary
                 , bytestring
                 , cereal
                 , containers
                 , cryptohash-md5
                 , cryptohash-sha256
                 , deepseq
                 , safecopy
                 , text
                 , time
                 , vector
                   -- component-specific dependencies
                 , tasty       ^>= 0.11
                 , tasty-hunit ^>= 0.9.2
